@@ -10,7 +10,7 @@ import java.util.Collections;
 import java.util.Set;
 
 @Component
-public class InitData  {
+public class InitData {
     private final UserService userService;
 
     public InitData(UserService userService) {
@@ -19,9 +19,9 @@ public class InitData  {
 
     @PostConstruct
     public void load() {
-        userService.add(new User("Karella", "or_009@mail.ru", "0000", Collections.singleton(new Role("ROLE_ADMIN"))));
-        userService.add(new User("YuIIOO-", "Jupitr@yandex.ru", "0000", Set.of(new Role("ROLE_ADMIN"), new Role("ROLE_USER"))));
-        userService.add(new User("Lotry=-", "toolong@gmail.com", "0000", Collections.singleton(new Role("ROLE_USER"))));
-        userService.add(new User("tea_for_one", "urban@gmail.com", "0000", Collections.singleton(new Role("ROLE_USER"))));
+        userService.add(new User("Oleg", "Karelov", 26, "ok1994@mail.ru", "0", Collections.singleton(new Role("ROLE_ADMIN"))));
+        userService.add(new User("Viktor", "Bitz", 36, "bitz@list.ru", "0", Set.of(new Role("ROLE_ADMIN"), new Role("ROLE_USER"))));
+        userService.add(new User("Sergey", "Logvinov", 41, "vote_now@yandex.ru", "0", Collections.singleton(new Role("ROLE_USER"))));
+        userService.add(new User("Boris", "Rogulov", 15, "urban@gmail.com", "0", Collections.singleton(new Role("ROLE_USER"))));
     }
 }
